# Parallel_programming_NSU_2025

./: .gitconfig  .gitignore
Task1/: Readme.md
Task1/test/: main  main.cpp  txt
Task1/with_Cmake/: CMakeLists.txt  Readme.md  main  main.cpp
Task1/with_Make/: Makefile  Readme.md  main.cpp
Task2/: CMakeLists.txt  Makefile  Readme.md  main.cpp  nain  nain.cpp  res_integr_40000000.csv  res_mult_20000.csv  res_mult_40000.csv  results.txt
Task2/All_in_one/: CMakeLists.txt  iter.cpp  main.cpp
Task2/All_in_one/results/: iter_for_omp_res.csv  iter_omp_res.csv
Task2/examples/: Makefile  hello_world  hello_world.cpp  hello_world_with_def_num_thr  hello_world_with_def_num_thr.cpp  list_of_threads  list_of_threads.cpp
Task2/func_lib/: integr.cpp  integr.h  mult_matr_vec.cpp  mult_matr_vec.h
Task2/time_lib/: control_time.cpp  control_time.h
Task2/work_with_file_lib/: file_manage.cpp  file_manage.h
Task3/: Makefile  client_server_gt.cpp  mult_matr_vec.cpp  out_server_log.csv  tqdm.hpp
Task3/AddTask/: ex_pack  example_add_async.cpp
Task3/Example/: CMakeLists.txt  README.md  argsThread.cpp  async_lazy_eager.cpp  barrierWorkers.cpp  cond_var.cpp  createThread.cpp  deadlock.cpp  interrupt_jthread.cpp  jthread.cpp  jthread_stop_callback.cpp  latchWorkers.cpp  lock_guard.cpp  mutex.cpp  package_task.cpp  promise_and_future.cpp  scoped_lock.cpp  shared_mutex.cpp  signal.cpp  syncThreadSemaphore.cpp  task_vs_thread.cpp  thread.cpp  thread_detach.cpp  thread_local.cpp  wait_future.cpp
Task3/archive/: client_server.cpp
Task3/results/: analyse.ipynb  res_mult_20000 copy.csv  res_mult_20000.csv  res_mult_40000 copy.csv  res_mult_40000.csv
Task3/results/.ipynb_checkpoints/: analyse-checkpoint.ipynb
Task4/: main.py
Task6/Eample/Basics/: CMakeLists.txt  cpu_gpu_var.cpp  paral_loop.cpp  sum_sin.cpp  swap_pointer.cpp
Task6/Eample/Laplace/: CMakeLists.txt  main_jacobi.c
Task6/Eample/Laplace/include/: laplace2d.h
Task6/Eample/Laplace/src/: laplace2d.c
Task7/: CMakeLists.txt  example_cublas_with_openacc.cpp
Task7/example/: a.out  test.cu
Task8/Examples/: a.out  first.cu  main
